[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-commit-line-stats"
version = "1.1.0"
description = "Count how many lines of code you commit on GitHub! (Count by file extension)"
readme = "README.md"
authors = [{ name = "yindaheng98", email = "yindaheng98@gmail.com" }]
dependencies = ["PyGithub"]
classifiers = ["Programming Language :: Python :: 3"]
urls = { Homepage = "https://github.com/yindaheng98/github-commit-line-stats" }
requires-python = ">=3.13"

# --- Setuptools-specific tables ---------------------------------------------

[tool.setuptools]
# Auto-discover all packages that start with one of the given globs
# (‘*’ is a wildcard, so both direct and nested modules are picked up)
packages = { find = { include = ["ghcls*"] } }

# Keep the conventional “flat” layout (sources live beside pyproject.toml)
[tool.setuptools.package-dir]
"" = "."
